# elvis

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  ROADMAP.md  benchmark.html  book.toml  color.html  community.html  contributing.html  dom.html  events.html  flex.html  gestures.html  grid.html  guide.html  image.html  index.html  layout.html  lib.html  multi_column.html  package.json  print.html  router.html  searchindex.js  searchindex.json  text.html  tsconfig.json  tslint.json  tutorial.html  unit.html  values.html  webpack.config.js  widgets.html
.cargo/: config
.github/workflows/: clippy.yml  elvis.yml  gh-pages.yml  rust.yml
arch/: backend.html  core.html  derive.html  epm.html  index.html  support.html  web.html
backend/: Cargo.toml
backend/src/: html.rs
book/: SUMMARY.md  benchmark.md  color.md  community.md  components.md  contributing.md  dom.md  events.md  flex.md  gesture.md  gestures.md  grid.md  guide.md  image.md  layout.md  lib.md  link.md  multi_column.md  router.md  text.md  tutorial.md  unit.md  values.md  widgets.md
book/arch/: README.md  backend.md  core.md  derive.md  epm.md  support.md  web.md
book/tutorial/: widgets.md
calling-elvis/: .gitignore  README.md  index.ts  package.json
calling-elvis/src/: elvis.js  elvis.ts  layouts.js  layouts.ts  router.js  router.ts  widgets.js  widgets.ts
calling_elvis/: text.ts
cli/: server.js  server.ts  webpack.config.js  webpack.config.ts
cli/src/: index.ts
core/src/: attr.rs  life.rs  wrapper.rs
core/src/style/: bridge.rs  column.rs  flex.rs
core/src/value/: border.rs  display.rs  grid.rs
crates/backend/: Cargo.toml  README.md
crates/backend/examples/: dir.rs
crates/backend/src/: cargo.rs  client.rs  err.rs  html.rs  lib.rs  logger.rs  mainfest.rs  manifest.rs  server.rs
crates/backend/tests/: dir.rs
crates/core/: Cargo.toml
crates/core-support/: Cargo.toml
crates/core-support/src/: enum_style.rs  lib.rs  setter.rs  style_wrapper.rs
crates/core-support/src/helper/: mod.rs
crates/core/src/: attr.rs  class.rs  derive.rs  err.rs  gesture.rs  lib.rs  life.rs  node.rs  router.rs  state.rs  style.rs
crates/core/src/style/: .#mod.rs  basic.rs  border.rs  box.rs  bridge.rs  column.rs  flex.rs  grid.rs  init.rs  mod.rs  typo.rs  widget.rs
crates/core/src/style/traits/: mod.rs
crates/core/src/value/: border.rs  box.rs  color.rs  column.rs  flex.rs  font.rs  layouts.rs  mod.rs  position.rs  typo.rs  unit.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs  node.rs
crates/epm/: Cargo.toml  README.md  build.rs
crates/epm/src/: lib.rs  template.rs
crates/epm/src/cmds/: .#mod.rs  mod.rs  new.rs
crates/flutter/: Cargo.toml
crates/flutter/src/: lib.rs  main.dart
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: closure.rs  driver.rs  err.rs  gestrue.rs  gesture.rs  lib.rs  life.rs  node.rs  serde.rs  state.rs  widget.rs
crates/shared/src/gesture/: detector.rs  gestures.rs  mod.rs
crates/shared/src/serde/: mod.rs  web.rs
crates/shared/src/tree/: mod.rs  node.rs
crates/support/: Cargo.toml
crates/support/src/: lib.rs  node.rs
crates/web/: Cargo.toml
crates/web/src/: .#node.rs  color.rs  driver.rs  enums.rs  err.rs  gesture.rs  layout.rs  lib.rs  node.rs  page.rs  router.rs  style.rs  widget.rs  widgets.rs
crates/web/src/event/: listener.rs  mod.rs  option.rs  phase.rs
crates/web/src/style/: mod.rs  parser.rs  sheet.rs
derive/src/: page.rs
docs/: benchmark.html  color.html  components.html  dom.html  events.html  flex.html  gesture.html  gestures.html  grid.html  guide.html  image.html  index.html  layout.html  lib.html  link.html  multi_column.html  print.html  router.html  searchindex.js  searchindex.json  text.html  tutorial.html  unit.html  values.html  widgets.html
docs/tutorial/: widgets.html
epm/: README.md  build.rs
epm/src/cmds/: build.rs  dev.rs  init.rs  mod.rs
examples/: README.md  ptr.rs  text.rs  tree.rs
examples/click/: Cargo.toml  lib.rs
examples/hello-world/: Cargo.toml  README.md  index.html  lib.rs
examples/hello-world/pages/: hello.rs  index.js  index.rs  mod.rs
examples/hello-world/src/: lib.rs
examples/router/: Cargo.toml  README.md
examples/router/pages/: back.rs  hello.rs  index.rs  mod.rs
examples/todo-mvc/: Cargo.toml  README.md  lib.rs
examples/todo-mvc/widget/: body.rs  footer.rs  header.rs  mod.rs
examples/tree/: ser.rs
examples/website/: Cargo.toml  lib.rs
lib/: ElvisElement.ts  Page.ts  TextElement.ts  element.js  index.ts
lib/widgets/: Divider.ts  Text.ts
src/: bridge.rs  css.rs  element.rs  elvis_element.rs  elvis_text.rs  err.rs  func.rs  gesture.rs  layout.rs  lib.rs  life.rs  page.rs  parser.rs  prelude.rs  serde.rs  state.rs  text.rs  traits.rs  tree.rs  widgets.rs
src/bridge/: image.rs  layout.rs  layouts.rs  macros.rs  mod.rs  text.rs  widgets.rs
src/gestures/: mod.rs
src/layout/: .#list.rs  basic.rs  column.rs  flex.rs  grid.rs  mod.rs
src/tree/: mod.rs  node.rs  state.rs  web.rs
src/values/: color.rs  layout.rs  mod.rs  unit.rs
src/web/: color.rs  image.rs  layout.rs  mod.rs  text.rs  tree.rs  unit.rs  values.rs  widgets.rs
src/widgets/: image.rs  input.rs  link.rs  mod.rs  scaffold.rs  style.rs  text.rs  tile.rs
src/widgets/layouts/: basic.rs  box.rs  column.rs  flex.rs  grid.rs  list.rs  (+1 more)
support/src/: setter.rs  style_wrapper.rs
template/: #index.ts#  .#index.ts  a.js  bootstrap.js  bootstrap.ts  index.js  index.ts
tests/: css.rs  extends.rs  text.rs  tree.rs  tree_de.rs  tree_eq.rs  tree_ser.rs  values.rs
theme/: header.hbs
tutorial/: widgets.html
web/: Cargo.toml  README.md
web/src/: app.rs  attr.rs  bridge.rs  color.rs  element.rs  elvis.rs  enums.rs  err.rs  func.rs  layout.rs  lib.rs  macros.rs  node.rs  prototype.rs  router.rs  state.rs  style.rs  text.rs  trans.rs  tree.rs  types.rs  unit.rs  web.rs  widget.rs  widgets.rs
web/src/event/: listener.rs  phase.rs
web/ts/: elvis.ts  index.ts  layouts.ts  router.ts  text.ts  widget.ts  widgets.ts
web/ts/values/: color.ts
(+9 files in other folders)
