[package]
name = "elvis"
version = "0.2.6"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"
description = "Calling Elvis, is anybody home?"
repository = "https://github.com/clearloop/elvis"
license = "MIT"
documentation = "https://docs.rs/elvis"
homepage = "https://github.com/clearloop/elvis"
include = ["src/**/*", "Cargo.toml", "./README.md"]
keywords = ["js", "wasm", "spa", "web"]
readme = './README.md'

[workspace]
members = [
  "crates/web",
  "crates/support",
  "crates/backend",
  "crates/derive",
  "crates/epm",
  "crates/core",
  "crates/core-support",
  "examples/hello-world",
  "examples/click",
  "examples/router",
  "examples/todo-mvc",
]

[dependencies]
elvis-web = { path = "crates/web", version = "0.1.6", optional = true }
elvis-core = { path = "crates/core", version = "0.1.0"  }
elvis-derive = { path = "crates/derive", version = "0.1.2" }
elvis-support = { path = "crates/support", version = "0.1.0"  }

[features]
web = [ "elvis-web", "elvis-core/web" ]
default = [ "web" ]

[profile.release]
lto = true