[package]
name = "elvis"
version = "0.3.1"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"
description = "Calling Elvis, is anybody home?"
repository = "https://github.com/clearloop/elvis"
license = "MIT"
documentation = "https://docs.rs/elvis"
homepage = "https://github.com/clearloop/elvis"
include = ["src/**/*", "Cargo.toml", "./README.md"]
keywords = ["js", "wasm", "spa", "web"]
readme = './README.md'

[workspace]
members = [
  "web",
  "backend",
  "derive",
  "epm",
  "core",
  "support",
  "examples/hello-world",
  "examples/click",
  "examples/router",
  "examples/todo-mvc",
  "examples/website",
]

[dependencies]
elvis-web = { path = "web", version = "^0.1", optional = true }
elvis-core = { path = "core", version = "^0.1"  }
elvis-derive = { path = "derive", version = "^0.1" }

[features]
web = [ "elvis-web", "elvis-core/web" ]
default = [ "web" ]

[profile.release]
lto = true