[package]
name = "elvis-backend"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strsim = "0.10.0"
serde_ignored = "0.1.2"
serde = { version = "1.0.114", features = ["derive"] }
cargo_metadata = "0.10.0"
wasm-bindgen-cli-support = "0.2.63"
toml = "0.5.6"
notify = "4.0.15"