[package]
name = "elvis-backend"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cargo_metadata = "0.10.0"
notify = "4.0.15"
serde = { version = "1.0.114", features = ["derive"] }
serde_ignored = "0.1.2"
strsim = "0.10.0"
toml = "0.5.6"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2.3"
wasm-bindgen-cli-support = "0.2.63"
