[package]
name = "elvis-backend"
version = "0.1.1"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"
description = "Evlis backend library"
repository = "https://github.com/clearloop/elvis"
license = "MIT"
documentation = "https://docs.rs/elvis-shared"
homepage = "https://github.com/clearloop/elvis"
include = ["src/**/*", "Cargo.toml", "./README.md"]
keywords = ["js", "wasm", "spa", "web"]
readme = './README.md'

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
etc = "0.1.8"
cargo_metadata = "0.10.0"
notify = "4.0.15"
serde = { version = "1.0.114", features = ["derive"] }
serde_ignored = "0.1.2"
strsim = "0.10.0"
toml = "0.5.6"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2.3"
wasm-bindgen-cli-support = "0.2.63"
futures = "0.3.5"
binaryen = "0.10.0"
