[package]
name = "epm"
version = "0.1.4"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"
description = "The Elvis Package Manager"
repository = "https://github.com/clearloop/epm"
license = "MIT"
documentation = "https://docs.rs/epm"
homepage = "https://github.com/clearloop/epm"
include = ["src/**/*", "Cargo.toml", "./README.md"]
keywords = ["elvis", "web"]
readme = './README.md'

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
toml = "0.5.6"
structopt = "0.3.14"
elvis-backend = { path = "../backend", version = "0.1.0" }
etc = { version = "0.1.8", features = ["serde-tree"] }

[build-dependencies]
etc = { version = "0.1.8", features = ["serde-tree", "serde/derive"] }
toml = "0.5.6"