[package]
name = "epm"
version = "0.1.4"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"
description = "The Elvis Package Manager"
repository = "https://github.com/clearloop/epm"
license = "MIT"
documentation = "https://docs.rs/epm"
homepage = "https://github.com/clearloop/epm"
include = ["src/**/*", "Cargo.toml", "./README.md"]
keywords = ["elvis", "web"]
readme = './README.md'

[dependencies]
elvis-backend = { path = "../backend", version = "0.1.0" }
env_logger = "0.7.1"
etc = { version = "0.1.8", features = ["serde-tree"] }
log = "0.4.0"
structopt = "0.3.14"
toml = "0.5.6"

[build-dependencies]
etc = { version = "0.1.8", features = ["serde-tree" ] }
toml = "0.5.6"