[package]
name = "elvis-shared"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"
description = "Evlis shared library"
repository = "https://github.com/clearloop/elvis"
license = "MIT"
documentation = "https://docs.rs/elvis-shared"
homepage = "https://github.com/clearloop/elvis"
include = ["src/**/*", "Cargo.toml", "./README.md"]
keywords = ["js", "wasm", "spa", "web"]
readme = './README.md'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
