[package]
name = "elvis-web"
version = "0.1.8"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"
description = "Calling Elvis, is anybody home?"
repository = "https://github.com/clearloop/elvis"
license = "MIT"
documentation = "https://docs.rs/elvis"
homepage = "https://github.com/clearloop/elvis"
exclude = ["ts/**/*"]
keywords = ["js", "wasm", "spa", "web"]
readme = './README.md'

[dependencies]
futures = "0.3.5"
thread_local = "1.0.1"
wasm-bindgen = "0.2.63"
js-sys = "0.3.40"
elvis-core = { path = "../core" , version = "^0.1" }

[dependencies.web-sys]
version = "0.3.40"
features = [
  "CssStyleRule",
  "CssStyleSheet",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "AddEventListenerOptions",
  "HtmlElement",
  "Location",
  "Node",
  "Window",
  "History"
]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-Os']