[package]
name = "hello-world"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
elvis = { path = "../.." }
elvis-web = { path = "../../crates/web" }
wasm-bindgen = "0.2.63"
