[package]
name = "elvis-app"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
elvis = { version = "0.2.4", path = "../.."}
wasm-bindgen = "0.2.63"
